--- a/social-network-frontend/public/index.html
+++ b/social-network-frontend/public/index.html
@@ -7,7 +7,8 @@
         <meta name="theme-color" content="#000000"/>
         <meta name="description" content="Web site created using create-react-app"/>
         <script src="https://kit.fontawesome.com/9f995f462a.js" crossorigin="anonymous" SameSite=None ></script>
-        <link rel="stylesheet" href="./bootstrap.min.css"/>
+        <link rel="stylesheet" href="./bootstrap.css"/>
+        <!-- <link rel="stylesheet" href="./bootstrap2.css"/> -->
         <link rel="stylesheet" href="./main.css"/>
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
 
