main.css enabled.

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="./bootstrap.css" />
         <!-- <link rel="stylesheet" href="./bootstrap2.css"/> -->
         <link rel="stylesheet" href="./layout.css" />
-        <!-- <link rel="stylesheet" href="./main.css" /> -->
+        <link rel="stylesheet" href="./main.css" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
         <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons"> -->
